--- a/XamarinExample/XamarinExample/XamarinExample.csproj
+++ b/XamarinExample/XamarinExample/XamarinExample.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.555618" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ModernHttpClient\ModernHttpClient.csproj" />
+  </ItemGroup>
 </Project>
