--- a/XamarinExample/XamarinExample.Android/XamarinExample.Android.csproj
+++ b/XamarinExample/XamarinExample.Android/XamarinExample.Android.csproj
@@ -104,5 +104,8 @@
       <Name>XamarinExample</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidEnvironment Include="environment.txt" />
+  </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
