--- a/XamarinExample/XamarinExample/XamarinExample.csproj
+++ b/XamarinExample/XamarinExample/XamarinExample.csproj
@@ -6,7 +6,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>pdbonly</DebugType>
-    <DefineConstants>TRACE;DEBUG;NETSTANDARD;NETSTANDARD2_0;DOT_NET</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NETSTANDARD;NETSTANDARD2_0;</DefineConstants>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
