--- a/RelayExampleApp/RelayExampleApp.csproj
+++ b/RelayExampleApp/RelayExampleApp.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\unity\BrainCloudClient\solution\vstudio\BrainCloudClient.csproj" />
+    <ProjectReference Include="..\braincloud-csharp\BrainCloudClient\solution\vstudio\BrainCloudClient.csproj" />
   </ItemGroup>
 
 </Project>
